[package]
name = "local-ws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3", default-features = false }
pretty_env_logger = "0.4.0"
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2.3"
local-ip-address = "0.4.9"
